--- a/forms.html
+++ b/forms.html
@@ -6,6 +6,7 @@
     <title>Forms</title>
 </head>
 <body>
+    <!--presentation of forms in this initial projct-->
     <form>
         <label for="Username">Name:</label>
         <input type="text" name="Username"><br><br>
@@ -33,6 +34,14 @@
         <label for="box3">CBT</label><br>
         <input type="checkbox" name="box4">
         <label for="box4">Diploma</label><br><br>
+        <!--adding new initials to this project-->
+        <label for="cars">Best and expensive cars:</label>
+        <select name="cars" id="cars">
+            <option value="BMW">BMW</option>
+            <option value="Rolls Royce">Rolls Royce</option>
+            <option value="Benz G63"> Benz G63</option>
+            <option value="Bugatti">Bugatti</option>
+        </select><br><br>
         <input type="submit" value="submit">
     </form>
 </body>
