made changes to forms

--- a/forms.html
+++ b/forms.html
@@ -42,6 +42,8 @@
             <option value="Benz G63"> Benz G63</option>
             <option value="Bugatti">Bugatti</option>
         </select><br><br>
+        <!--adding text areas to the project-->
+        <textarea name="" id="" row="100" cols="10"></textarea><br>
         <input type="submit" value="submit">
     </form>
 </body>
